# dde-session

./: .gitignore  CMakeLists.txt  README.md  README.zh_CN.md  REUSE.toml  lupdate.sh
.reuse/: dep5
.tx/: transifex.yaml
dbus/: org.deepin.Session.service  org.deepin.Session.xml
dbus/adaptor/: com.deepin.SessionManager.xml  org.deepin.Session.xml  org.deepin.WMSwitcher.xml  org.deepin.dde.SessionManager1.xml
dbus/interface/: com.deepin.XSettings.xml  com.deepin.daemon.Daemon.xml  com.deepin.system.Bluetooth.xml  org.deepin.daemon.Audio1.Sink.xml  org.deepin.daemon.Daemon1.xml  org.deepin.daemon.PowerManager1.xml  org.deepin.system.Bluetooth1.xml  org.freedesktop.DBus.xml  org.freedesktop.login1.Session.xml  org.freedesktop.systemd1.Manager.xml
dbus/types/: envinfolist.h  sessionpath.cpp  sessionpath.h  sessionpathlist.cpp  sessionpathlist.h  stringstructlist.cpp  stringstructlist.h
debian/: changelog  control  postinst  rules
docs/: design.md
misc/: CMakeLists.txt
misc/Xsession.d/: 00deepin-dde-env  94qt_env  97deepin-keyring-wb
misc/dconf/: org.deepin.dde.session.oom-score-adj.json
misc/wayland-sessions/: dde-wayland.desktop  dde-wayland.desktop.in
misc/xsessions/: dde-x11.desktop  dde-x11.desktop.in  deepin.desktop
src/: CMakeLists.txt
src/dde-session/: CMakeLists.txt  deepinversionchecker.cpp  envhandler.cpp  envhandler.h  environments_manager.cpp  environments_manager.h  environmentsmanager.cpp  environmentsmanager.h  keyringchecker.cpp  keyringchecker.h  main.cpp  othersmanager.cpp  othersmanager.h  xsettingschecker.cpp  xsettingschecker.h
src/dde-session-ctl/: CMakeLists.txt  main.cpp
src/dde-session/impl/: inhibitor.cpp  inhibitor.h  session.cpp  session.h  session_manager.cpp  sessionmanager.cpp  sessionmanager.h  wmswitcher.cpp  wmswitcher.h
src/dde-session/impl/iowait/: iowaitwatcher.cpp  iowaitwatcher.h  xcursor_remap.h
src/dde-session/types/: envinfolist.cpp
src/utils/: dconf.cpp  dconf.h  fifo.cpp  fifo.h  utils.h
systemd/: CMakeLists.txt  dde-keyring.service.in  dde-session-core.target  dde-session-exit-task.service  dde-session-exit-task.service.in  dde-session-initialized.target  dde-session-manager.service  dde-session-manager.service.in  dde-session-manager.target  dde-session-pre.service  dde-session-pre.target  dde-session-restart-dbus.service  dde-session-shutdown.service  dde-session-shutdown.target  dde-session-wayland.target  dde-session-x11-services-ready.target  dde-session-x11-services.target  dde-session-x11.target  dde-session.target  dde-session@wayland.service  dde-session@x11.service  org.deepin.Session.service  services.slice
systemd/dde-session-core.target.wants/: dde-shell-plugin@org.deepin.ds.desktop.service  dde-shell@DDE.service
systemd/dde-session-daemon.target.wants/: dde-dock.service  dde-lock.service  dde-lock.timer  dde-osd.service  dde-polkit-agent.service
systemd/dde-session-initialized.target.wants/: dde-desktop.service  dde-display.service  dde-display.target  dde-dock.service  dde-lock.service  dde-osd.service  dde-polkit-agent.service  dde-session-daemon.service  dde-session-daemon.target  dde-session@x11.service  dde-shell-plugin@org.deepin.ds.desktop.service  dde-shell@DDE.service  dde-shell@TreeLand.service  deepin-deepinid-daemon.service
systemd/dde-session-pre.target.wants/: dde-display.service  dde-display.target  dde-quick-login@x11.service  dde-session@x11.service
systemd/dde-session.target.wants/: dde-session@x11.service
toolGenerate/qdbusxml2cpp/: com.deepin.wmAdaptor.cpp  com.deepin.wmAdaptor.h  org.deepin.dde.Audio1.SinkAdaptor.cpp  org.deepin.dde.Audio1.SinkAdaptor.h  org.deepin.dde.Audio1Adaptor.cpp  org.deepin.dde.Audio1Adaptor.h  org.deepin.dde.Bluetooth1Adaptor.cpp  org.deepin.dde.Bluetooth1Adaptor.h  org.deepin.dde.Daemon1Adaptor.cpp  org.deepin.dde.Daemon1Adaptor.h  org.deepin.dde.Inhibitor1Adaptor.cpp  org.deepin.dde.Inhibitor1Adaptor.h  org.deepin.dde.PowerManager1Adaptor.cpp  org.deepin.dde.PowerManager1Adaptor.h  org.deepin.dde.Session1Adaptor.cpp  org.deepin.dde.Session1Adaptor.h  org.deepin.dde.SessionManager1Adaptor.cpp  org.deepin.dde.SessionManager1Adaptor.h  org.deepin.dde.SoundThemePlayer1Adaptor.cpp  (+15 more)
tools/: CMakeLists.txt  analyze-boot-time.sh  analyze-memory.sh
tools/dde-login-reminder/: CMakeLists.txt  dde-login-reminder.desktop  dde-login-reminder.service  loginreminderinfo.cpp  loginreminderinfo.h  loginremindermanager.cpp  loginremindermanager.h  main.cpp
tools/dde-login-reminder/translations/: dde-login-reminder.ts  dde-login-reminder_ar.ts  dde-login-reminder_az.ts  dde-login-reminder_bg.ts  dde-login-reminder_bo.ts  dde-login-reminder_ca.ts  dde-login-reminder_cs.ts  dde-login-reminder_da.ts  dde-login-reminder_de.ts  dde-login-reminder_el.ts  dde-login-reminder_en_AU.ts  dde-login-reminder_en_GB.ts  dde-login-reminder_en_US.ts  dde-login-reminder_es.ts  dde-login-reminder_et.ts  dde-login-reminder_fa.ts  dde-login-reminder_fi.ts  dde-login-reminder_fr.ts  dde-login-reminder_gl_ES.ts  dde-login-reminder_hi_IN.ts  dde-login-reminder_hr.ts  dde-login-reminder_hu.ts  dde-login-reminder_id.ts  dde-login-reminder_it.ts  dde-login-reminder_ja.ts  dde-login-reminder_ka.ts  dde-login-reminder_kab.ts  dde-login-reminder_kk.ts  dde-login-reminder_ko.ts  dde-login-reminder_lt.ts  dde-login-reminder_mn.ts  dde-login-reminder_ms.ts  dde-login-reminder_ne.ts  dde-login-reminder_nl.ts  dde-login-reminder_pa.ts  dde-login-reminder_pl.ts  dde-login-reminder_pt.ts  dde-login-reminder_pt_BR.ts  dde-login-reminder_ro.ts  dde-login-reminder_ru.ts  (+14 more)
tools/dde-oom-score-adj/: CMakeLists.txt  dde-oom-score-adj.desktop  main.cpp  oomscoreadjuster.cpp  oomscoreadjuster.h
tools/dde-quick-login/: CMakeLists.txt  lockprocessmanager.cpp  lockprocessmanager.h  main.cpp
tools/dde-version-checker/: CMakeLists.txt  dde-version-checker.service  dde-version-checker@quick-login.service  deepinversionchecker.h  main.cpp
tools/dde-xsettings-checker/: CMakeLists.txt  dde-xsettings-checker.service  main.cpp  xsettingschecker.cpp  xsettingschecker.h
(+3 files in other folders)
